--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,29 @@
 form span{
     color: red;
 }
+
+input[type=text]{
+    margin-bottom: 1em;
+}
+
+form label{
+    display: inline-block;
+    text-align: right;
+    width: 15%;
+    margin-right: 2em;
+}
+
+form button{
+    margin-left: 20%;
+}
+
+@media only screen and (max-width: 450px){
+    form label{
+        text-align: left;
+        width: 100%;
+    }
+
+    form button{
+        margin-left: 0%;
+    }
+}
